--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@ddcode_/eascalpi",
-  "version": "1.2.8",
+  "version": "1.3.0",
   "type": "commonjs",
-  "description": "",
+  "description": "Simple call-api function",
   "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "Javascript","functional"
+  ],
+  "author": "Didi Anasfudi",
   "license": "ISC",
   "dependencies": {
     "xhr2": "^0.2.1"
